Adição inicial de CSS (bootstrap)

--- a/CalculadoraAvancada/CalculadoraAvancada/Views/Home/Index.cshtml
+++ b/CalculadoraAvancada/CalculadoraAvancada/Views/Home/Index.cshtml
@@ -8,48 +8,49 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <title>Calculadora</title>
 </head>
 <body>
-    <div>
+    <>
         <h1 style="color:red">Calculadora</h1>
         <!-- este objecto envia os dados do formulario para o servidor -->
         <!-- este comentario aparece no cliente -->
         @* mas este já não aparece... *@
         <form method="post">
-            <table border="1">
-                <tr>
-                    <td colspan="5">
-                        <input type="text" name="visor" readonly="readonly" value="@ViewBag.Visor" />
-                    </td>
-                </tr>
-                <tr>
-                    <td><input type="submit" value="7" name="bt" /></td>
-                    <td><input type="submit" value="8" name="bt" /></td>
-                    <td><input type="submit" value="9" name="bt" /></td>
-                    <td><input type="submit" value=":" name="bt" /></td>
-                    <td><input type="submit" value="+/-" name="bt" /></td>
-                </tr>
-                <tr>
-                    <td><input type="submit" value="4" name="bt" /></td>
-                    <td><input type="submit" value="5" name="bt" /></td>
-                    <td><input type="submit" value="6" name="bt" /></td>
-                    <td><input type="submit" value="x" name="bt" /></td>
-                    <td><input type="submit" value="C" name="bt" /></td>
-                </tr>
-                <tr>
-                    <td><input type="submit" value="1" name="bt" /></td>
-                    <td><input type="submit" value="2" name="bt" /></td>
-                    <td><input type="submit" value="3" name="bt" /></td>
-                    <td><input type="submit" value="-" name="bt" /></td>
-                    <td rowspan="2"><input type="submit" value="=" name="bt" /></td>
-                </tr>
-                <tr>
-                    <td colspan="2"><input type="submit" value="0" name="bt" /></td>
-                    <td><input type="submit" value="," name="bt" /></td>
-                    <td><input type="submit" value="+" name="bt" /></td>
-                </tr>
-            </table>
+                <table style="border-spacing:5px;border-collapse:collapse; border:1px solid">
+                    <tr>
+                        <td colspan="5">
+                            <input type="text" class="form-control" style="height:30px; width:215px; text-align:right;" name="visor" readonly="readonly" value="@ViewBag.Visor" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input class="btn" style="width:40px;height:40px;" type="submit" value="7" name="bt" /></td>
+                        <td><input class="btn" style="width:40px;height:40px;" type="submit" value="8" name="bt" /></td>
+                        <td><input class="btn" style="width:40px;height:40px;" type="submit" value="9" name="bt" /></td>
+                        <td><input class="btn" style="width:40px;height:40px;" type="submit" value=":" name="bt" /></td>
+                        <td><input class="btn" style="width:40px;height:40px;" type="submit" value="+/-" name="bt" /></td>
+                    </tr>
+                    <tr>
+                        <td><input type="submit" value="4" name="bt" /></td>
+                        <td><input type="submit" value="5" name="bt" /></td>
+                        <td><input type="submit" value="6" name="bt" /></td>
+                        <td><input type="submit" value="x" name="bt" /></td>
+                        <td><input type="submit" value="C" name="bt" /></td>
+                    </tr>
+                    <tr>
+                        <td><input type="submit" value="1" name="bt" /></td>
+                        <td><input type="submit" value="2" name="bt" /></td>
+                        <td><input type="submit" value="3" name="bt" /></td>
+                        <td><input type="submit" value="-" name="bt" /></td>
+                        <td rowspan="2"><input type="submit" value="=" name="bt" /></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><input type="submit" value="0" name="bt" /></td>
+                        <td><input type="submit" value="," name="bt" /></td>
+                        <td><input type="submit" value="+" name="bt" /></td>
+                    </tr>
+                </table>
         </form>
 
 
